// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErrorsView displays nothing if no errors 1`] = `<div />`;

exports[`ErrorsView displays procedure link if unknown procedure 1`] = `
<div>
  <div
    class="sc-hGPBjI kgdIGh"
  >
    <div
      class="sc-dlVxhl fwhZkz"
    >
      <div
        class="sc-kfPuZi lgMZCo"
      >
        <div
          class="sc-cxpSdN sc-iJKOTD cnlYxc kGIKmg"
        >
          ERROR
        </div>
        <h4
          class="sc-ikJyIC ieqznC"
        >
          Neo.ClientError.Procedure.ProcedureNotFound
        </h4>
      </div>
      <div
        class="sc-fKVqWL"
      >
        <pre
          class="sc-hiCibw jvxLJD"
          data-testid="cypherFrameErrorMessage"
        >
          not found
        </pre>
      </div>
      <div
        class="sc-iwjdpV bufpWB"
      >
        <a
          class="sc-bBHxTw dwqDlO"
        >
          <i
            class="sc-bdvvtL hGsZIa fa fa-play-circle-o"
            style="line-height: inherit;"
          />
           List available procedures
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`ErrorsView does display a nested error for gql status codes 1`] = `
<div>
  <div
    class="sc-hGPBjI kgdIGh"
  >
    <div
      class="sc-dlVxhl fwhZkz"
    >
      <div
        class="sc-kfPuZi lgMZCo"
      >
        <div
          class="sc-cxpSdN sc-iJKOTD cnlYxc kGIKmg"
        >
          ERROR
        </div>
        <h4
          class="sc-ikJyIC ieqznC"
        >
          42N51: Syntax error or access rule violation - invalid parameter
        </h4>
      </div>
      <div
        class="sc-fKVqWL"
      >
        <pre
          class="sc-hiCibw jvxLJD"
          data-testid="cypherFrameErrorMessage"
        >
          Invalid parameter $\`param\`.
        </pre>
      </div>
      <div
        class="sc-hGPBjI snaKN"
      >
        <div
          class="sc-dlVxhl fwhZkz"
        >
          <div
            class="sc-kfPuZi lgMZCo"
          >
            <h4
              class="sc-ikJyIC ieqznC"
            >
              22G03: Data exception - invalid value type
            </h4>
          </div>
          <div
            class="sc-hGPBjI snaKN"
          >
            <div
              class="sc-dlVxhl fwhZkz"
            >
              <div
                class="sc-kfPuZi lgMZCo"
              >
                <h4
                  class="sc-ikJyIC ieqznC"
                >
                  22N27: Data exception - invalid entity type
                </h4>
              </div>
              <div
                class="sc-fKVqWL"
              >
                <pre
                  class="sc-hiCibw jvxLJD"
                  data-testid="cypherFrameErrorMessage"
                >
                  Invalid input '******' for $\`param\`. Expected to be STRING.
                </pre>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ErrorsView does display an error 1`] = `
<div>
  <div
    class="sc-hGPBjI kgdIGh"
  >
    <div
      class="sc-dlVxhl fwhZkz"
    >
      <div
        class="sc-kfPuZi lgMZCo"
      >
        <div
          class="sc-cxpSdN sc-iJKOTD cnlYxc kGIKmg"
        >
          ERROR
        </div>
        <h4
          class="sc-ikJyIC ieqznC"
        >
          Test.Error
        </h4>
      </div>
      <div
        class="sc-fKVqWL"
      >
        <pre
          class="sc-hiCibw jvxLJD"
          data-testid="cypherFrameErrorMessage"
        >
          Test error description
        </pre>
      </div>
    </div>
  </div>
</div>
`;

exports[`ErrorsView does display an error for gql status codes 1`] = `
<div>
  <div
    class="sc-hGPBjI kgdIGh"
  >
    <div
      class="sc-dlVxhl fwhZkz"
    >
      <div
        class="sc-kfPuZi lgMZCo"
      >
        <div
          class="sc-cxpSdN sc-iJKOTD cnlYxc kGIKmg"
        >
          ERROR
        </div>
        <h4
          class="sc-ikJyIC ieqznC"
        >
          22N14: Data exception - invalid temporal value combination
        </h4>
      </div>
      <div
        class="sc-fKVqWL"
      >
        <pre
          class="sc-hiCibw jvxLJD"
          data-testid="cypherFrameErrorMessage"
        >
          Cannot select both epochSeconds and 'datetime'.
        </pre>
      </div>
    </div>
  </div>
</div>
`;
